--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   margin: 0;
   min-height: 100vh;
   color: #03080f;
+  line-height: 1.5em;
+  font-size: 16px;
 }
 .coolsite {
   color: #ebf2fd;
@@ -72,4 +74,12 @@ h3.title {
 
 .bord-1 {
   border-radius: 3px;
+}
+
+p.has-dropcap:first-letter {
+  margin: 0 3px;
+  color: rgb(255, 123, 0);
+  font-size: 300%;
+  line-height: 1;
+  float: left;
 }
